# testcoe

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-windows.yml
cmake/: copy_mingw_dlls.cmake  utils.cmake
docs/: ARCHITECTURE.md  CONTRIBUTING.md  ROADMAP.md
examples/: CMakeLists.txt  README.md
examples/basic/: CMakeLists.txt  README.md  main.cpp  math_tests.cpp  string_tests.cpp  vector_tests.cpp
examples/crash/: CMakeLists.txt  README.md  crash_tests.cpp  main.cpp
examples/filter/: CMakeLists.txt  README.md  main.cpp  test_suites.cpp
include/: CMakeLists.txt  testcoe.hpp
include/testcoe/: grid_listener.hpp  signal_handler.hpp  terminal_utils.hpp
src/: CMakeLists.txt  grid_listener.cpp  signal_handler.cpp  testcoe.cpp
src/testcoe/: grid_listener.cpp  terminal_utils.cpp
tests/: CMakeLists.txt  examples_integration_tests.cpp  grid_listeners_tests.cpp  integration_tests.cpp
